# nn

./: .gitignore  CMakeLists.txt  Makefile  README.md  default.nix  nn.hpp  test_nn.cpp
